@@ -1,30 +1,21 @@
 package org.likelionhsu.backend.naversearch.controller;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.likelionhsu.backend.naversearch.service.NaverSearchService;
-import org.likelionhsu.backend.post.domain.Category;
-import org.likelionhsu.backend.post.domain.Post;
-import org.likelionhsu.backend.post.service.PostService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -41,75 +32,47 @@ class NaverSearchControllerTest {
     @MockBean
     private NaverSearchService naverSearchService;
 
-    @MockBean
-    private PostService postService;
-
     @Test
-    @DisplayName("네이버 블로그/카페 검색 및 저장 성공")
-    void searchNaverBlogsAndCafes_success() throws Exception {
+    @DisplayName("일간 트렌드 조회 API 성공")
+    void getDailyTrends_success() throws Exception {
         // Given
-        String query = "서산 맛집";
-        int display = 10;
-        int start = 1;
-
-        Post mockPost1 = Post.builder()
-                .title("서산 맛집 1")
-                .content("내용 1")
-                .link("http://link1.com")
-                .pubDate("2023-01-01")
-                .region("서산시")
-                .category(Category.BLOG)
-                .crawledAt(LocalDateTime.now())
-                .build();
-        Post mockPost2 = Post.builder()
-                .title("서산 맛집 2")
-                .content("내용 2")
-                .link("http://link2.com")
-                .pubDate("2023-01-02")
-                .region("서산시")
-                .category(Category.CAFE)
-                .crawledAt(LocalDateTime.now())
-                .build();
-        List<Post> mockPosts = Arrays.asList(mockPost1, mockPost2);
-
-        when(naverSearchService.searchNaverBlogsAndCafes(anyString(), anyInt(), anyInt(), anyString()))
-                .thenReturn(mockPosts);
+        JsonNode mockResponse = objectMapper.readTree("{\"results\":[]}");
+        when(naverSearchService.getDailyTrends("2023-01-01", "2023-01-07", List.of(
+                Map.of("groupName", "Technology", "keywords", List.of("AI", "Machine Learning"))
+        ))).thenReturn(mockResponse);
 
         // When & Then
-        mockMvc.perform(get("/api/v1/naver-search/blogs-cafes")
-                        .param("query", query)
-                        .param("display", String.valueOf(display))
-                        .param("start", String.valueOf(start)))
+        mockMvc.perform(post("/api/v1/naver-search/daily-trend")
+                        .param("startDate", "2023-01-01")
+                        .param("endDate", "2023-01-07")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(List.of(
+                                Map.of("groupName", "Technology", "keywords", List.of("AI", "Machine Learning"))
+                        ))))
                 .andDo(print())
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[0].title").value("서산 맛집 1"));
-
-        // Verify that postService.savePosts was called
-        verify(postService, times(1)).savePosts(mockPosts);
+                .andExpect(jsonPath("$.results").isArray());
     }
 
     @Test
-    @DisplayName("네이버 블로그/카페 검색 결과 없음")
-    void searchNaverBlogsAndCafes_noResult() throws Exception {
+    @DisplayName("주간 트렌드 조회 API 성공")
+    void getWeeklyTrends_success() throws Exception {
         // Given
-        String query = "없는 검색어";
-        int display = 10;
-        int start = 1;
-
-        when(naverSearchService.searchNaverBlogsAndCafes(anyString(), anyInt(), anyInt(), anyString()))
-                .thenReturn(Collections.emptyList());
+        JsonNode mockResponse = objectMapper.readTree("{\"results\":[]}");
+        when(naverSearchService.getWeeklyTrends("2023-01-01", "2023-01-31", List.of(
+                Map.of("groupName", "Health", "keywords", List.of("Yoga", "Meditation"))
+        ))).thenReturn(mockResponse);
 
         // When & Then
-        mockMvc.perform(get("/api/v1/naver-search/blogs-cafes")
-                        .param("query", query)
-                        .param("display", String.valueOf(display))
-                        .param("start", String.valueOf(start)))
+        mockMvc.perform(post("/api/v1/naver-search/weekly-trend")
+                        .param("startDate", "2023-01-01")
+                        .param("endDate", "2023-01-31")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(List.of(
+                                Map.of("groupName", "Health", "keywords", List.of("Yoga", "Meditation"))
+                        ))))
                 .andDo(print())
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(0));
-
-        // Verify that postService.savePosts was NOT called
-        verify(postService, times(0)).savePosts(any());
+                .andExpect(jsonPath("$.results").isArray());
     }
 }
